run linter on all files

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,11 @@
 {
     "plugins": ["prettier"],
-    "extends": ["airbnb-base", "react-app", "plugin:prettier/recommended"],
+    "extends": ["airbnb-base", "react-app", "plugin:prettier/recommended", "eslint-config-prettier"],
     "env": {
         "browser": true
+    },
+    "settings": {
+        "import/extensions": [".js", ".jsx"]
     },
     "parserOptions": {
         "ecmaVersion": 6,
@@ -11,6 +14,8 @@
         }
     },
     "rules": {
-        "prettier/prettier": "error"
+        "prettier/prettier": "error",
+        "import/no-unresolved": "off",
+        "import/extensions": "off"
     }
 }
