--- a/package.json
+++ b/package.json
@@ -9,43 +9,17 @@
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-router-dom": "^5.1.2",
-        "react-scripts": "3.0.1",
+        "react-scripts": "3.4.2",
         "semantic-ui-css": "^2.4.1",
         "semantic-ui-react": "^0.87.3"
     },
     "eslintConfig": {
-        "plugins": [
-            "prettier"
-        ],
         "extends": [
-            "airbnb-base",
-            "react-app",
-            "plugin:prettier/recommended",
-            "eslint-config-prettier"
-        ],
-        "env": {
-            "browser": true
-        },
-        "settings": {
-            "import/extensions": [
-                ".js",
-                ".jsx"
-            ]
-        },
-        "parserOptions": {
-            "ecmaVersion": 6,
-            "ecmaFeatures": {
-                "jsx": true
-            }
-        },
-        "rules": {
-            "prettier/prettier": "error",
-            "import/no-unresolved": "off",
-            "import/extensions": "off"
-        }
+            "react-app"
+        ]
     },
     "scripts": {
-        "start": "EXTEND_ESLINT=true react-scripts start",
+        "start": "EXTEND_ESLINT=true PORT=3001 react-scripts start",
         "build": "EXTEND_ESLINT=true react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
@@ -61,5 +35,12 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "eslint-config-airbnb-base": "^14.2.0",
+        "eslint-config-prettier": "^6.11.0",
+        "eslint-plugin-import": "^2.22.0",
+        "eslint-plugin-prettier": "^3.1.4",
+        "prettier": "^2.0.5"
     }
 }
