--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
         }
     },
     "scripts": {
-        "start": "EXTEND_ESLINT=true react-scripts start",
-        "build": "EXTEND_ESLINT=true react-scripts build",
+        "start": "react-scripts start",
+        "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
