--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
     "private": true,
     "dependencies": {
         "anchorate": "^1.2.3",
+        "express": "^4.17.1",
         "gulp": "^4.0.2",
         "prop-types": "^15.7.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-router-dom": "^5.1.2",
-        "react-scripts": "3.0.1",
+        "react-scripts": "^3.4.3",
         "semantic-ui-css": "^2.4.1",
         "semantic-ui-react": "^0.87.3"
     },
